# notion-bills-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: get_secret.yaml  process-bills.yml
.specify/features/remove-read-emails/: spec.md
.specify/features/remove-read-emails/checklists/: requirements.md
.specify/memory/: constitution.md
config/: bill_categories.yaml  gmail_config.yaml  notion_config.yaml
src/: bill_processor.py  gemini_processor.py  gmail_client.py  logger_utils.py  main.py  notion_client.py
src/chase_bill_tracker.egg-info/: PKG-INFO  SOURCES.txt
src/notion_bills_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
