[project]
name = "notion-bills-tracker"
version = "0.1.0"
description = "A tool to track personal bills and push to notion."
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "google-generativeai",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "dspy-ai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"