[project]
name = "notion-bills-tracker"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
description = "A tool to track personal bills and push to notion."
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "google-generativeai",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "dspy-ai",
    "PyYAML",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
